--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -12,11 +12,16 @@
 %
 
 %
-%
+% \nomenclature{}{}
 %% acronyms
 
 
-\nomenclature{IP}{Internet Protocol}
+\nomenclature{AMW}{AssessMediaWiki}
+\nomenclature{DBA}{Design-Based Assessment}
+\nomenclature{DSL}{Domain-Specific Language}
+\nomenclature{SASQL}{Simple Assessment Specific Query Language}
+\nomenclature{SNA}{Social Network Analysis}
+\nomenclature{VWQL}{Virtual World Query Languaje}
 
 
 
