--- a/6_conclusion/0_index.tex
+++ b/6_conclusion/0_index.tex
@@ -20,20 +20,42 @@ Now this is not the end. It is not even the beginning of the end. But it is, per
 \fi
 
 
+En este capítulo se presentan las conclusiones de este trabajo de investigación. Además se comentan los trabajos futuros que se pueden realizar para continuar esta línea de investigación.
+
 %------------------------------------------------------------------------- 
 
-\cite{turing1950computing}
+\section{Conclusiones}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices egestas nunc, venenatis rhoncus elit fermentum non. Pellentesque gravida nulla vitae ipsum lobortis ullamcorper. Ut adipiscing, tellus in egestas mattis, enim metus pretium erat, ac tempor dolor neque placerat nulla. Nullam nec ligula eu ipsum pharetra semper a in magna. Integer ut tortor quis nisi fringilla euismod eu ac ipsum. Pellentesque sodales consectetur erat eget rutrum. Proin ornare dolor ut arcu aliquet vestibulum. Pellentesque laoreet tincidunt sem eget semper.
+En esta tesis doctoral se ha presentado el método DBA y se ha propuesto su utilización para la evaluación de competencias genéricas. El método DBA tiene su origen en la metodología DBR y se basa en el diseño de evaluaciones a partir de indicadores de la actividad de los estudiantes generada en los entornos virtuales de apoyo a la docencia. El diseño de evaluaciones se realiza dentro del ciclo de contraste de hipótesis. De esta forma, un docente que quiera realizar una evaluación formula un diseño (hipótesis de evaluación) a partir de los indicadores del entorno virtual, el sistema devuelve los resultados de aplicar esta fórmula y el docente evalúa su validez para la evaluación de la competencia. Mientras no le sean válidos, el docente seguirá rediseñando la fórmula de evaluación hasta alcanzar un diseño que le satisfaga o hasta que tenga que descartar los resultados.
 
-Integer interdum mattis magna ullamcorper tristique. Nullam commodo nulla eget ipsum vulputate tincidunt auctor leo aliquet. Fusce euismod sagittis ante, eu vulputate eros dictum at. Cras non euismod nunc. Nullam velit diam, consectetur sed eleifend vitae, blandit at arcu. Maecenas ut urna nec turpis lobortis commodo. Aliquam aliquet turpis id massa viverra id sollicitudin est cursus. Sed a tortor non mauris cursus imperdiet.
+Para poner en práctica el método DBA se han propuesto herramientas de tipo DSL. En primer lugar se desarrolló SASQL, un DSL para obtener indicadores de la actividad de los estudiantes del VLE y EvalCourse, el software que interpreta las consultas escritas en SASQL. En segundo lugar se desarrolló VWQL, DSL que en este caso obtiene indicadores de la activdad de los estudiantes de los mundos virtuales y EvalSim, el software que interpreta las consultas escritas en VWQL.
 
-Integer fermentum rutrum urna at vestibulum. Vivamus ullamcorper erat in sapien dignissim pellentesque. Integer convallis fringilla dictum. In bibendum lectus eu nulla pretium volutpat. Morbi hendrerit fringilla tortor, sed gravida neque lacinia a. In risus magna, hendrerit vitae cursus ac, vehicula at eros. Aenean quis ipsum sit amet leo vestibulum cursus.
+Se han desarrollado seis estudios de caso entre los cursos 2010-11 y 2014-15 en el que los docentes han utilizado los DSL que implementan el método DBA para la evaluación de competencias genéricas. Estas experiencias han servido para obtener retroalimentación de los docentes que han participado. Además, estos estudios de caso se han presentado en varios congresos y revistas, pasando por procesos de revisión ciega por pares.
 
-Cras placerat mattis dui quis vehicula. Nulla sit amet metus nibh, at auctor enim. Quisque congue ultricies sapien in suscipit. Fusce vitae placerat ante. Praesent aliquet urna ac elit consequat nec mattis augue faucibus. Nunc et sapien vel felis mollis sodales. Aenean molestie nulla vestibulum nisi fringilla vel euismod dolor tristique. Aenean fermentum, dolor eget tincidunt faucibus, risus lorem feugiat elit, sagittis malesuada eros ligula in odio. Pellentesque ac libero lobortis justo bibendum laoreet. Cras egestas lorem eget ligula dignissim sollicitudin. Vestibulum sit amet augue ultrices erat faucibus vestibulum. Aenean tincidunt faucibus leo, nec auctor diam bibendum a. Sed varius, mauris in pellentesque scelerisque, nisl ligula viverra erat, in eleifend tellus enim ac magna. Pellentesque quis est risus. Cras mollis feugiat auctor. Proin ac eros vitae nulla gravida varius.
+De entre los participantes en estos estudios de caso y otros contextos educativos se ha llevado a cabo una encuesta para llevar a cabo la evaluación del método. En primer lugar, con esta encuesta se ha dado validez al método para ser utilizado en la evaluación de diferentes competencias genéricas. Los indicadores han sido aceptados como válidos para evaluar competencias genéricas por un porcentaje alto de docentes para cada competencia genérica. Además, aquellos docentes que no consideraron la evaluación de alguna competencia lo hicieron porque consideraban que el indicador debería ser completado con más información. Asimismo, mediante la formulación de diferentes hipótesis nulas se ha demostrado que las respuestas de los participantes en la encuesta son independientes tanto de los conocimientos de programación (nulos o básicos frente a medios o avanzados) como de la relación de los participantes con la docencia (profesorado universitario, profesorado no universitario o no profesorado relacionado con las wikis).
 
-Morbi at augue sapien. Duis tempus quam vitae velit interdum ultricies. Vivamus laoreet lacinia elit sit amet vehicula. Ut congue diam ac magna hendrerit sed fermentum justo lacinia. Curabitur vel odio neque, quis consequat mi. Proin lobortis justo quis enim fermentum accumsan sagittis ipsum imperdiet. Proin sem felis, laoreet placerat egestas id, fringilla id mauris. Pellentesque a nisi sit amet leo consectetur gravida nec et dui. Curabitur quis hendrerit augue. Etiam sed dui nec tortor convallis fringilla. Proin tempor mattis diam nec egestas. Quisque condimentum elementum lacus ac porta. Vivamus congue, odio eu ullamcorper elementum, leo turpis tempus sem, at condimentum dolor quam eu nunc. Pellentesque eget risus ac velit aliquam sollicitudin sed et ipsum. 
+Por tanto, de los resultados de la evaluación realizada, se considera que la metolodogía DBA parece ser una propuesta eficaz para abordar la evaluación de competencias genéricas, ya que aporta indicadores objetivos del trabajo de los estudiantes en las herramientas virtuales, indicadores que han sido aceptados por los docentes para la evaluación de competencias genéricas y cuya obtención mediante las herramientas proporcionadas no les requiere conocimientos informáticos avanzados.
+
 
 % ----------------------------------------------------------------------
 
+\section{Trabajo futuro}
 
+Durante la realización de este trabajo se han superado los retos que se plantearon inicialmente. Sin embargo, durante la realización de la misma, se han encontrado algunos problemas o nuevos retos que no han llegado a ser abordados pero que complementarían en muchos casos esta tesis doctoral.
+
+Estos trabajo futuros serían:
+\begin{itemize}
+\item Añadir indicadores basados en la aplicación de técnicas del análisis de las redes sociales (SNA) a los entornos virtuales de aprendizaje. En un wiki de Moodle utilizado en clase se puso a los estudiantes en parejas para que cada pareja realizase su trabajo en una página del wiki. Una vez finalizada la actividad, aplicando técnicas de SNA se obtuvo el grafo~\ref{fig:SNAWiki}. En dicho grafo, el nodo del medio es el profesor. Puede verse como al principio el profesor creó la sección principal, mientras que los estudiantes ubicaron los enlaces a sus páginas en dicha página principal (arista que une a los nodos periféricos con el nodo central). El resto de arista que une normalmente dos nodos periféricos representa los estudiantes que colaboraron juntos en una página. El tamaño de los nodos representa la cantidad de trabajo realizado por cada estudiante.
+\item Integrar los DSL con los propios entornos virtuales de aprendizaje. En este momento las herramientas virtuales (VLE, wiki o mundo virtual) funcionan por su lado. Los DSL se conectan a ellos de algún modo y se obtienen los indicadores. Sería interesante poder integrar el DSL en dichas herramientas dentro del perfil de supervisor que se otorga a los docentes en muchas de estas herramientas virtuales.
+\item Establecer una biblioteca que relacione actividades a realizar por los estudiantes en los entornos de aprendizaje, indicadores que se generan y competencias genéricas que se evaluarían con dichos indicadores.
+\end{itemize}
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[scale=0.5]{SNA-Grafo-Wiki-SD.png}
+  \end{center}
+  \caption{Grafo resultante de aplicar técnicas de SNA a un wiki de Moodle}
+  \label{fig:SNAWiki}
+\end{figure}
+
+% ----------------------------------------------------------------------
