--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -26,7 +26,15 @@ Morbi at augue sapien. Duis tempus quam vitae velit interdum ultricies. Vivamus 
 \selectlanguage{spanish}
 % Pon tu resumen aquí.
 
-La evaluación de diferentes competencias genéricas es una labor que deben realizar los docentes en sus asignaturas a lo largo de la docencia ....
+La evaluación de competencias genéricas es una labor que tienen que realizar los docentes de todos los niveles educativos en sus asignaturas.
+
+En este trabajo se ha desarrollado un método de evaluación de competencias genéricas basado en el diseño (DBA). Este método se basa en el diseño de evaluaciones mediante la utilización de indicadores de la actividad desempeñada por los estudiantes en los entornos de aprendizaje virtual. Este método surge de la oportunidad que se presenta de aprovechar la cantidad de información generada por los estudiantes en los entornos virtuales.
+
+Para poner en práctica el método DBA se han desarrollado dos DSL que lo implementan. En primer lugar se desarrolló SASQL, un DSL para obtener indicadores de la actividad de los estudiantes del VLE y EvalCourse, el software que interpreta las consultas escritas en SASQL. En segundo lugar se desarrolló VWQL, DSL que en este caso obtiene indicadores de la activdad de los estudiantes de los mundos virtuales y EvalSim, el software que interpreta las consultas escritas en VWQL.
+
+Se han realizado varios estudios de caso en los que se han planificado actividades en el campus virtual para después recopilar los rastros de interacción generados por los estudiantes y aplicarlos a la evaluación de varias competencias genéricas.
+
+La evaluación de la metodología se ha realizado mediante encuestas ...
  
 
 
