--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -1005,9 +1005,9 @@ A continuación se muestra un resumen para estos trabajos en el que se muestra l
 
 \section{Conclusiones}
 
-Las competencias genéricas son hoy en día una pieza fundamental en las planificaciones de las asignaturas a todos los niveles académicos. Como consecuencia de esto, son numerosos los trabajos y los proyectos que se han puesto en marcha en los últimos años para fomentar el desarrollo de las mismas en los estudiantes. Una vez trabajadas estas competencias y finalizados estos proyecto, es necesaria una evaluación del nivel de adquisición de estas competencias en los estudiantes.
+Las competencias genéricas son hoy en día una pieza fundamental en las planificaciones de las asignaturas a todos los niveles académicos. Como consecuencia de esto, son numerosos los trabajos y los proyectos que se han puesto en marcha en los últimos años para fomentar el desarrollo de las mismas en los estudiantes. Tanto durante el desarrollo como a la finalización estos trabajos y proyectos, es necesaria una evaluación del nivel de adquisición de estas competencias en los estudiantes.
 
-En la literatura hemos encontrado diferentes problemas a la hora de afrontar esta evaluación. Por un lado problemas de objetividad, ya que los criterios que para un docente son válidos para la evaluación de una competencia genérica puede no ser válido para otro. Y por otro lado problemas de escalabilidad. Si ya en muchos casos la carga de trabajo del profesorado para poder alcanzar los objetivos del curso es elevada, aún más lo será si éstos tienen que generar y evaluar nuevas actividades para evaluar las competencias genéricas. Además, este problema de escalabilidad se acrecienta aún más en el contexto de los entornos de aprendizaje virtuales, donde los cursos en ocasiones contienen un número muy elevado de estudiantes (por ejemplo los cursos de tipo MOOC (\emph{Massive Online Open Courses}).
+En la literatura hemos encontrado diferentes problemas a la hora de afrontar esta evaluación. Por un lado problemas de objetividad, ya que los criterios que para un docente son válidos para la evaluación de una competencia genérica pueden no ser válidos para otro. Y por otro lado, problemas de escalabilidad. Si ya en muchos casos la carga de trabajo del profesorado para poder alcanzar los objetivos del curso es elevada, aún más lo será si éstos tienen que generar y evaluar nuevas actividades para evaluar las competencias genéricas. Además, este problema de escalabilidad se acrecienta aún más en el contexto de los entornos de aprendizaje virtuales, donde los cursos en ocasiones contienen un número muy elevado de estudiantes (por ejemplo los cursos de tipo MOOC (\emph{Massive Online Open Courses}).
 
 Para conocer el estado del arte en la evaluación de competencias genéricas mediante el uso de la tecnología se ha realizado un estudio de la literatura en forma de SMS. Tras esta revisión fueron 30 los trabajos seleccionados y a partir de ellos se ha dado respuesta a las preguntas de investigación inicialmente planteadas.
 
