--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -64,8 +64,8 @@ year = {2013},
 @inproceedings{Dodero:2013,
         author={Dodero,J. M. and Palomo-Duarte,M. and Ruiz-Rube,I. and Traverso,I. and Mota,J. M.},
         year={2013},
-        title={{ASCETA: Accesibilidad a servicios y contenidos educativos mediante tecnologías del aprendizaje}},
-        booktitle={{XV Simposio Internacional de Tecnologías de la Información y las Comunicaciones en la Educación}},
+        title={{ASCETA: Accesibilidad a servicios y contenidos educativos mediante tecnolog{\'\i}as del aprendizaje}},
+        booktitle={{XV Simposio Internacional de Tecnolog{\'\i}as de la Información y las Comunicaciones en la Educación}},
         pages={116--120}
 }
 
@@ -509,7 +509,7 @@ author = "Leslie Borjas De Xena"
 @article{guenaga2013serious,
   title={Serious Games for the Development of Employment Oriented Competences},
   author={Guenaga, Mariluz and Arranz, Sonia and Rubio Florido, Isabel and Aguilar, Eduardo and Ortiz de Guinea, Alex and Rayon, Alex and Bezanilla, Mara Jose and Menchaca, Iratxe},
-  journal={IEEE Revista Iberoamericana de Tecnologías del Aprendizaje},
+  journal={IEEE Revista Iberoamericana de Tecnolog{\'\i}as del Aprendizaje},
   volume={8},
   number={4},
   pages={176--183},
@@ -1273,8 +1273,8 @@ author = "Leslie Borjas De Xena"
 
 @article{conde2015exploring,
   title={Exploring Software Engineering Subjects by Using Visual Learning Analytics Techniques},
-  author={Conde, Miguel A and García-Peñalvo, Francisco J and Gómez-Aguilar, Diego-Alonso and Theron, Roberto},
-  journal={IEEE Revista Iberoamericana de Tecnologías del Aprendizaje},
+  author={Conde, Miguel A and Garc{\'\i}a-Peñalvo, Francisco J and Gómez-Aguilar, Diego-Alonso and Theron, Roberto},
+  journal={IEEE Revista Iberoamericana de Tecnolog{\'\i}as del Aprendizaje},
   volume={10},
   number={4},
   pages={242--252},
