--- a/Apendice/Entrevistas.tex
+++ b/Apendice/Entrevistas.tex
@@ -1,3 +1,5 @@
+%!TEX root = dissertation.tex
+
 \chapter{Cuestionario complementario actuación avalada} \label{Ap:cuestionarioAA}
 
 % the code below specifies where the figures are stored
@@ -124,7 +126,7 @@ Los docentes que participaron en la actuación avalada recibieron un cuestionari
 
 El número de docentes que consideraría utilizar los indicadores de acceso al campus virtual para cada competencias genérica puede verse en la figura~\ref{fig:ape:aa:accesos}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \includegraphics[scale=0.45]{aa_accesos.png}
   \caption{Docentes que considerarían los indicadores de accesos para evaluar cada competencia genérica}
   \label{fig:ape:aa:accesos}
@@ -143,7 +145,7 @@ El número de docentes que consideraría utilizar los indicadores de acceso al c
 
 El número de docentes que consideraría utilizar los indicadores de acceso al campus virtual para cada competencias genérica puede verse en la figura~\ref{fig:ape:aa:foros}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \includegraphics[scale=0.4]{aa_foros.png}
   \caption{Docentes que considerarían los indicadores de los foros para evaluar cada competencia genérica}
   \label{fig:ape:aa:foros}
@@ -158,13 +160,14 @@ El número de docentes que consideraría utilizar los indicadores de acceso al c
 
 	\subsection*{C. Indicadores del wiki}
 
-El número de docentes que consideraría utilizar los indicadores de acceso al campus virtual para cada competencias genérica puede verse en la figura~\ref{fig:ape:aa:wiki}.
+El número de docentes que consideraría utilizar los indicadores de acceso al campus virtual para cada competencias genérica puede verse en la figura~\ref{fig:ape:aa:wikis}.
 
-\begin{figure}[h]
-    \includegraphics[scale=0.35]{aa_wikis.png}
-  \caption{Docentes que considerarían los indicadores de los wikis para evaluar cada competencia genérica}
-  \label{fig:ape:aa:wikis}
+\begin{figure}[ht]
+	\includegraphics[scale=0.35]{aa_wikis.png}
+	\caption{Docentes que considerarían los indicadores de los wikis para evaluar cada competencia genérica}
+	\label{fig:ape:aa:wikis}
 \end{figure}
+
 
 \paragraph*{Comentarios}
 
@@ -177,8 +180,8 @@ El número de docentes que consideraría utilizar los indicadores de acceso al c
 
 El número de docentes que consideraría utilizar los indicadores de acceso al campus virtual para cada competencias genérica puede verse en la figura~\ref{fig:ape:aa:actividades}.
 
-\begin{figure}[h]
-    \includegraphics[scale=0.4]{aa_actividades.png}
+\begin{figure}[ht]
+    \includegraphics[scale=0.4]{aa-actividades.png}
   \caption{Docentes que considerarían los indicadores de las actividades para evaluar cada competencia genérica}
   \label{fig:ape:aa:actividades}
 \end{figure}
