--- a/Latex/Classes/PhDthesisPSnPDF.cls
+++ b/Latex/Classes/PhDthesisPSnPDF.cls
@@ -55,7 +55,7 @@
 \usepackage[margin=10pt,font=small,labelfont=bf]{caption} % for improved layout of figure captions with extra margin, smaller font than text
 \usepackage{fancyhdr} % for better header layout
 \usepackage{eucal}
-\usepackage[usenames, dvipsnames]{color}
+\usepackage[usenames, dvipsnames]{xcolor}
 \usepackage[perpage]{footmisc}
 
 %\usepackage[round, sort, numbers, authoryear]{natbib}
@@ -233,7 +233,7 @@
 \usepackage{multirow}
 
 % Introduce slash \
-\usepackage{slashbox}
+\usepackage{Latex/StyleFiles/slashbox}
 
 
 % Watermarks
