--- a/Apendice/Cuestionario.tex
+++ b/Apendice/Cuestionario.tex
@@ -1,3 +1,5 @@
+%!TEX root = dissertation.tex
+
 \chapter{Cuestionario} \label{Ap:cuestionario}
 
 % the code below specifies where the figures are stored
