--- a/1_introduction/3_objetivos.tex
+++ b/1_introduction/3_objetivos.tex
@@ -10,6 +10,8 @@ El principal objetivo de esta tesis es:
 \textbf{Proporcionar un método y una herramienta informática para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual}
 \bigskip
 
+\subsection{Preguntas de investigación}
+
 Para alcanzar dicho objetivo, se comenzará definiendo una serie de preguntas de investigación a las que se tratará de dar respuesta mediante una revisión de la literatura. Las preguntas de investigación son las siguientes:
 
 \paragraph*{Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?}
@@ -42,6 +44,7 @@ Por último, deberemos responder a la pregunta de qué técnicas se han empleado
 
 %\bigskip
 %A partir de aquí el objetivo de esta investigación será proveer a los diseñadores de evaluaciones de un lenguaje para obtener de manera automatizada un conjunto de indicadores entre los que elegir para ir aplicándolos a sus procesos de evaluación segun las competencias genéricas que quieran evaluar. Esto se divide en los siguientes tres objetivos:
+\subsection{Objetivos}
 
 A partir del objetivo principal de esta tesis de proporcionar un método a los docentes para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual, así como una herramienta informática que implemente el método, se obtienen dos objetivos:
  
@@ -52,6 +55,19 @@ Basándonos en la metodologia DBR se definirá un método que permita evaluar la
 \paragraph*{O2. Definir un DSL (\emph{Lenguaje Específico de Dominio}, del inglés, \emph{Domain-Specific Language}) que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual}
 
 Se definirán un conjunto de herramientas informáticas basadas en un DSL que implementen el método del objetivo O1 y que sea aplicable a diferentes entornos de virtuales de aprendizaje.
+
+\subsection{Hipótesis de investigación}
+
+Para evaluar la consecución de los objetivos propuestos se plantean las siguientes hipótesis:
+
+% Hablar de método DBA o de método propuesto ...
+\paragraph*{H1: El método DBA permite obtener de manera automática indicadores de los entornos de aprendizaje virtual.}
+
+Esta hipótesis se corresponde con el objetivo \emph{O1} y persigue conocer si el método propuesto permite obtener indicadores de los entornos de aprendizaje de manera automática.
+
+\paragraph*{H2: El DSL permite a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual.}
+
+Esta hipótesis se corresponde con el objetivo \emph{O2} y persigue evaluar si la herramienta creada para poner en práctica el método permite a los docentes diseñar y contrastar las estrategias de evaluación a partir de los registros de actividad.
 
 %Para comenzar a abordar estos objetivos partiremos de las evidencias utilizadas y referidas por los autores en la literatura como susceptibles de ser utilizadas en la evaluación de competencias genéricas. Estas evidencias se mapearán a un entorno de aprendizaje virtual y se implementaran para obtenerlas mediante el uso de alguna herramienta informática. A continuación, se definirá un DSL que permita al docente no únicamente obtener indicadores, sino investigar y diseñar diferentes estrategias de evaluación a partir de dichos indicadores. De esta forma el docente podrá ajustar los indicadores según el trabajo realizado por los estudiantes en el curso.
 
