--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -11,9 +11,7 @@
 @inproceedings{communique2012making,
   title={Making the most of our potential: Consolidating the European Higher Education Area},
   author={Communiqu{\'e}, Bucharest},
-  booktitle={European Higher Education Area Ministerial Conference},
-  volume={16},
-  pages={2012},
+  booktitle={2012 Ministerial Conference and 3rd Bologna Policy Forum Documents},
   year={2012}
 }
 
