--- a/dissertation.tex
+++ b/dissertation.tex
@@ -223,6 +223,8 @@
 \include{Apendice/Cuestionario}
 % Entrevista
 \include{Apendice/Entrevistas}
+% Metodo y DSL
+\include{Apendice/EvalMetodo}
 
 %: ----------------------- bibliography ------------------------
 
