--- a/5_experiments_and_results/0_index.tex
+++ b/5_experiments_and_results/0_index.tex
@@ -618,53 +618,71 @@ Evidence palabras_turno:
 
 		Este estudio de caso se llevó a cabo en un instituto en el curso 2014-15, en la asignatura de \emph{Alemán como lengua extranjera}, equivalente al nivel B1 del marco común de referencia europeo (CEFR, del inglés, Common European Framework of Reference). La asignatura contaba con 5 estudiantes matriculados que participaron durante sus clase en varias partidas en un mundo virtual. El profesorado utilizó EvalSim y VWQL para obtener indicadores de la participación de los estudiantes en el mundo virtual y aplicarlos a la evaluación de la competencia genérica de la habilidad para comunicarse en un segundo idioma.
 
-\section{Cuestionario de evaluación}
+\section{Cuestionarios de evaluación}
 
-	Para la evaluación de este trabajo de investigación se ha desarrollado un cuestionario dirigido a profesionales del ámbito docente y de las TIC siguiendo las directrices marcadas por Oates~\cite{oates2006researching} (capítulo 7).  El cuestionario y sus resultados pueden verse en el apéndice~\ref{Ap:cuestionario}. 
+	Para la evaluación de este trabajo de investigación se han desarrollado tres cuestionarios dirigidos a profesionales del ámbito docente y de las TIC siguiendo las directrices marcadas por Oates~\cite{oates2006researching} (capítulo 7). Los cuestionarios y sus resultados pueden verse en los apéndices~\ref{Ap:cuestionario},~\ref{Ap:cuestionarioAA} y~\ref{Ap:eval-metodo}. 
+
+
+\subsection{Objetivo}
+
+El objetivo de los cuestionarios es evaluar si los objetivos de esta tesis se han alcanzado. Cabe recordar que los objetivos de esta tesis son los siguientes:
+
+\begin{itemize}
+\item \emph{O1}: Definir un método que permita al docente obtener de manera automática un conjunto de indicadores de los entornos de aprendizaje virtual
+\item \emph{O2}: Definir un DSL que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual
+\end{itemize}
+
+Para valorar la consecución de los objetivos se plantearon las siguientes hipótesis:
+
+\begin{itemize}
+\item \emph{H1}: El método DBA permite obtener de manera automática indicadores de los entornos de aprendizaje virtual
+\item \emph{H2}: El DSL permite a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual
+\end{itemize}
+
+Para evaluar tanto \emph{H1} como \emph{H2} se utilizó el cuestionario~\ref{apc:eval:metodo:cuestionario}. Además, para conocer la validez de los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse para evaluar las competencias genéricas se utilizaron los cuestionarios~\ref{apc:sec:cuestionario} y~\ref{apc:AA:cuestionario}. Para ello se planteó en el cuestionario un estudio de caso de ejemplo, preguntándose a los participantes si consideraban los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse válidos para evaluar las competencias genéricas.%, corroborando si su respuesta es independiente del perfil tecnológico de los participantes en el cuestionario.
+
+Como se puede observar en esta tesis a tenor de los objetivos, lo que se propone es un método y la herramienta (DSL) para diseñar evaluaciones de competencias genéricas. Esto significa que los indicadores que se proponen a lo largo de los ejemplos y los estudios de caso mostrados no son fijos, es decir, que lo que es válido para un docente como indicador de una competencia puede no serlo para otro y viceversa. Por tanto, un número elevado de docentes que considere válido los indicadores no justificaría en exclusiva la validez de los resultados. Para dar validez a los resultados, además hay que demostrar que el hecho de que un número de docentes lo acepte y otros no debe estar marcado única y exclusivamente por el criterio de cada docente, y no porque sus habilidades tecnológicas le confieran mayor pericia y conocimiento en el manejo del DSL que proporciona los indicadores.
 
 \subsection{Participantes} \label{eva:participantes}
 
-El cuestionario fue completado por diferentes colectivos de profesionales de la docencia y las TIC. De esta forma se pretendía abordar dos cuestiones importantes. En primer lugar, obtener un número representativo de cuestionarios completados, algo que suele resultar complicado cuando se depende de la buena voluntad y el tiempo de los encuestados. Y en segundo lugar, poder analizar la percepción de la herramienta y el método desde la perspectiva de diferentes colectivos relacionados con el dominio. A continuación se describe cada uno de estos colectivos.
+Los cuestionarios fueron completados por diferentes colectivos de profesionales de la docencia y las TIC. De esta forma se pretendía abordar dos cuestiones importantes. En primer lugar, obtener un número representativo de cuestionarios completados, algo que suele resultar complicado cuando se depende de la buena voluntad y el tiempo de los encuestados. Y en segundo lugar, poder analizar la percepción de la herramienta y el método desde la perspectiva de diferentes colectivos relacionados con el dominio. A continuación se describe cada uno de estos colectivos.
 
 	\subsubsection{Curso wiki innovación}
 
 		Durante el curso 2014-15 se impartió a docentes de la Universidad de Cádiz un curso de innovación docente sobre wikis cuyo título fue \emph{Introducción al uso educativo de wikis}. El curso se impartió en los cuatros campus de la Universidad de Cádiz, asistiendo en total unos 30 docentes. El curso constó de dos sesiones de 4 horas cada una en las que se explicó cómo trabajar en clase con wikis, se propusieron enfoques para favorecer el desempeño de competencias genéricas de los estudiantes, presentándose el método DBA y la herramienta EvalCourse.  Además, se incluyeron actividades prácticas que se desarrollaron en las mismas sesiones. 
 
-A los asistentes al curso, que fueron todos docentes de la Universidad de Cádiz, se les envió el cuestionario, siendo 11 los que lo completaron.
+A los asistentes al curso, que fueron todos docentes de la Universidad de Cádiz, se les envió el cuestionario~\ref{apc:sec:cuestionario}, siendo 11 los que lo completaron.
 
 	\subsubsection{Taller Aulablog}
 
 		Los días 6, 7 y 8 de julio del 2015 se celebró en Ubrique (Cádiz) el X encuentro Aulablog~\footnote{http://www.aulablog.com/blog/encuentro10/}. Aulablog es una reunión de docentes de toda España donde se ponen en común experiencias  dentro del ámbito de las tecnologías educativas. En dicho encuentro impartimos un taller sobre wikis en educación. El taller constó de una sesión de 3 horas en la que se explicó cómo trabajar en clase con wikis y se propusieron enfoques para favorecer el desempeño de competencias genéricas de los estudiantes, presentándose el método DBA y la herramienta EvalCourse. Al taller asistieron 20 docentes.
 
-A los asistentes al taller, que fueron docentes de varios niveles educativos, se les envió el cuestionario, siendo 14 los que lo completaron.
+A los asistentes al taller, que fueron docentes de varios niveles educativos, se les envió el cuestionario~\ref{apc:sec:cuestionario}, siendo 14 los que lo completaron.
 
 	\subsubsection{Actuación avalada}
 
 		Durante los cursos 2013-14 y 2014-15 dirigimos dos proyectos de tipo de actuación avalada dentro de los programas de innovación docente de la Universidad de Cádiz. En dichas experiencias colaboraron varios docentes responsables de varias asignaturas de los Grados en Ingeniería Informática y en Publicidad y RR.PP. Una vez finalizado cada curso se aplicó EvalCourse y se pusieron los indicadores obtenidos a disposición de los docentes para que lo utilizasen y propusiesen mejoras tanto de posibles indicadores a obtener como de mejoras en la herramienta.
 
-A partir de este proyecto se consiguieron 8 cuestionarios completados. Este grupo además completó un cuestionario complementario en el que indicaban para qué competencias genéricas podrían utilizar en sus asignaturas los indicadores proporcionados por EvalCourse (Cuestionario~\ref{Ap:cuestionarioAA}).
+A partir de este proyecto se consiguieron 8 cuestionarios completados (cuestionario~\ref{apc:sec:cuestionario}). Este grupo además completó un cuestionario complementario en el que indicaban para qué competencias genéricas podrían utilizar en sus asignaturas los indicadores proporcionados por EvalCourse (Cuestionario~\ref{apc:AA:cuestionario}).
 
 	\subsubsection{MediaWiki España}
 
-	Por último se implicó a profesionales del ámbito de las TIC, y más en concreto de las wikis, pero no necesariamente ligados a la docencia. Mediante correo electrónico enviado a los miembros de MediaWiki España, se les explicó el método DBA, la herramienta EvalCourse y se les invita a completar el cuestionario.		
+	Se implicó a profesionales del ámbito de las TIC, y más en concreto de las wikis, pero no necesariamente ligados a la docencia. Mediante correo electrónico enviado a los miembros de MediaWiki España, se les explicó el método DBA, la herramienta EvalCourse y se les invita a completar el cuestionario.		
 
-En este caso se consiguieron 19 cuestionarios completados.
+En este caso se consiguieron 19 cuestionarios completados (cuestionario~\ref{apc:sec:cuestionario}).
 
-\subsection{Objetivo del cuestionario}
+	\subsubsection{Jornadas de Innovación Docente de la Universidad de Cádiz}
 
-El objetivo del cuestionario es evaluar si los objetivos de esta tesis se han alcanzado. Cabe recordar que los objetivos de esta tesis son los siguientes:
+	En estas jornadas celebradas en el mes de marzo de 2016 se presentaron tanto el método DBA como el DSL que lo implementa. Los participantes eran docentes de todas las ramas de la universidad que presencialmente completaron la encuesta. 
 
-\begin{itemize}
-\item Definir un método que permita al docente obtener de manera automática un conjunto de indicadores de los entornos de aprendizaje virtual
-\item Definir un DSL que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual
-\end{itemize}
-
-Para lograrlo se planteó en el cuestionario un estudio de caso de ejemplo, preguntándose a los participantes si consideraban los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse válidos para evaluar las competencias genéricas.%, corroborando si su respuesta es independiente del perfil tecnológico de los participantes en el cuestionario.
-
-Como se puede observar en esta tesis a tenor de los objetivos, lo que se propone es un método y la herramienta (DSL) para diseñar evaluaciones de competencias genéricas. Esto significa que los indicadores que se proponen a lo largo de los ejemplos y los estudios de caso mostrados no son fijos, es decir, que lo que es válido para un docente como indicador de una competencia puede no serlo para otro y viceversa. Por tanto, un número elevado de docentes que considere válido los indicadores no justificaría en exclusiva la validez de los resultados. Para dar validez a los resultados, además hay que demostrar que el hecho de que un número de docentes lo acepte y otros no debe estar marcado única y exclusivamente por el criterio de cada docente, y no porque sus habilidades tecnológicas le confieran mayor pericia y conocimiento en el manejo del DSL que proporciona los indicadores.
+En este último caso se recopilaron 30 cuestionarios (cuestionario~\ref{apc:eval:metodo:cuestionario}). 
 
 
-\subsection{Resultados del cuestionario}
+\subsection{Resultados del cuestionario del método y el DSL}
+
+El cuestionario~\ref{apc:eval:metodo:cuestionario} fue completado por 30 docentes en el mes de marzo de 2016 tras asistir a la presentación del método y el DSl en las Jornadas de Innovación Docente. La distribución de los participantes con respecto a la rama que pertenecen se muestra en la figura ... %~\ref{fig:cap:encuesta:rama}.
+
+\subsection{Resultados del cuestionario de indicadores}
 
 El cuestionario (apéndice~\ref{Ap:cuestionario}) fue enviado en el mes de julio de 2015 a los diferentes colectivos. En este cuestionario se presentaba un estudio de caso de ejemplo en un wiki de Moodle, se mostraban dos consultas escritas en SASQL para la extracción de indicadores aplicables en la evaluación de competencias genéricas y se mostraban algunos de los indicadores y figuras obtenidas mediante la ejecución de dichas consultas en EvalCourse. 
 
@@ -779,7 +797,7 @@ Para justificar el liderazgo la mayoría de los participantes se basan en el niv
 
 Los participantes que abogan por el `no` se basan principalmente en que el nivel de participación no implica liderazgo, por lo que descartan totalmente el indicador proporcionado para medir el liderazgo. Se propone como alternativa opuesta que un indicador de liderazgo podría ser considerar precisamente qué usuario es el que menos trabaja, siendo necesario complementar este indicador con otro relativo a la comunicación entre los miembros del equipo.
 
-\subsection{Resultados de la encuesta complementaria de la actuación avalada}
+\subsection{Resultados de la encuesta complementaria de indicadores}
 
 Además del cuestionario principal, los docentes que participaron en los proyectos de actuación avalada recibieron un cuestionario en el que valoraban para qué competencias genéricas consideraban útiles los indicadores proporcionados por la herramienta EvalCourse (apéndice~\ref{Ap:cuestionarioAA}). Esta encuesta también tuvo lugar en julio de 2015, siendo 8 los docentes que participaron en la misma. La tabla~\ref{tab:indicador:competencia} muestra para cada competencia genérica (filas) cuántos docentes la consideraron evaluable a partir de alguno de los indicadores (columnas).
 
