--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -22,6 +22,13 @@
   publisher={University of Deusto Final report. Phase one. Bilbao}
 }
 
+@article{gonzalez2005tuning,
+  title={Tuning Educational Structures in Europe II. Universitites’ contribution to the Bologna Process},
+  author={Gonz{\'a}lez, J and Wagenaar, R},
+  journal={University of Deusto},
+  year={2005}
+}
+
 @inproceedings{Chebil:2012,
         author={Chebil,H. and Girardot,J. and Courtin,C.},
         editor={ },
